added .png handler

--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "fck-old-file-viewers",
   "version": "1.0.1",
   "description": "The following package, aims to resolve the issues with current react file viewers.",
-  "main": "index.js",
+  "main": "build/index.js",
+  "exports": {
+    ".": {
+      "import": "./build/index.js",
+      "types": "./build/index.d.ts"
+    }
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,6 +27,7 @@
   "author": "Gurvir Singh <gurvirsingh.baraich@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@types/react": "^18.3.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   }
