--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "@types/react": "^18.3.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "react-pdf": "^9.1.1"
   }
 }
